# ksunira

./: README.md  docker-compose.yml  start.sh
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/api/: queue.py  search.py  session.py  users.py  websockets.py
backend/core/: config.py  database.py  websocket_manager.py
backend/models/: __init__.py  queue.py  session.py  track.py  user.py  vote.py
backend/schemas/: queue.py  session.py  track.py  user.py
backend/services/: file_service.py  queue_service.py  yt_service.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/host/[sessionId]/: page.tsx
frontend/app/join/[sessionId]/: page.tsx
frontend/components/: NowPlaying.tsx  Player.tsx  PlayerControls.tsx  Queue.tsx
frontend/lib/: api.ts  websocket.ts
