[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "anyio>=4.13.0",
    "asyncpg>=0.31.0",
    "click>=8.3.1",
    "fastapi>=0.135.2",
    "greenlet>=3.3.2",
    "h11>=0.16.0",
    "httptools>=0.7.1",
    "idna>=3.11",
    "mutagen>=1.47.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.48",
    "starlette>=1.0.0",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "uvicorn>=0.42.0",
    "uvloop>=0.22.1",
    "watchfiles>=1.1.1",
    "websockets>=16.0",
    "yt-dlp>=2026.3.17",
]
